--- a/package.json
+++ b/package.json
@@ -12,20 +12,25 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "twilio": "3.56",
-    "@twilio/runtime-handler": "1.2.2",
+    "@reduxjs/toolkit": "^1.8.1",
+    "@twilio/runtime-handler": "^1.0.2",
+    "@types/react-router-dom": "^5.3.3",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-router-dom": "^6.3.0"
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "redux-thunk": "^2.4.1",
+    "twilio": "3.56"
   },
   "devDependencies": {
-    "@types/react": "^18.0.0",
+    "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.51.0",
+    "twilio-run": "3.4.1",
     "typescript": "^4.6.3",
-    "vite": "^2.9.5",
-    "twilio-run": "3.4.1"
+    "vite": "^2.9.5"
   }
 }
