--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "google-meet-clone",
   "version": "0.0.0",
   "private": true,
-  "engines": {
-    "node": "14"
-  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "vite",
@@ -14,20 +11,19 @@
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.1",
     "@twilio/runtime-handler": "^1.0.2",
+    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "redux-thunk": "^2.4.1",
     "twilio": "3.56"
   },
   "devDependencies": {
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
-    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.51.0",
     "twilio-run": "3.4.1",
     "typescript": "^4.6.3",
