--- a/package.json
+++ b/package.json
@@ -9,16 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.8.1",
     "@twilio/runtime-handler": "^1.0.2",
-    "@types/react-redux": "^7.1.24",
     "@types/react-router-dom": "^5.3.3",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-redux": "^8.0.1",
     "react-router-dom": "^6.3.0",
-    "twilio": "3.56"
+    "twilio": "3.56",
+    "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
     "@types/react": "^18.0.8",
