--- a/package.json
+++ b/package.json
@@ -4,27 +4,44 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "vite",
+    "vite": "vite",
+    "dev": "run-p server vite",
+    "server": "node-env-run server --exec nodemon | pino-colada",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "@twilio/runtime-handler": "^1.0.2",
+    "@twilio/video-processors": "^1.0.2",
     "@types/react-router-dom": "^5.3.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "express-pino-logger": "^6.0.0",
     "firebase": "^9.6.11",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
     "twilio": "3.56",
+    "twilio-video": "^2.21.1",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.11",
+    "@types/qs": "^6.9.4",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
     "@vitejs/plugin-react": "^1.3.0",
+    "dotenv": "^16.0.0",
+    "node-env-run": "^4.0.2",
+    "nodemon": "^2.0.13",
+    "npm-run-all": "^4.1.5",
+    "pino-colada": "^2.2.0",
     "sass": "^1.51.0",
     "twilio-run": "3.4.1",
     "typescript": "^4.6.3",
     "vite": "^2.9.5"
+  },
+  "overrides": {
+    "react-error-overlay": "6.0.9"
   }
 }
