--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@twilio/video-processors": "^1.0.2",
     "@types/react-router-dom": "^5.3.3",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
     "firebase": "^9.6.11",
@@ -43,5 +44,6 @@
   },
   "overrides": {
     "react-error-overlay": "6.0.9"
-  }
+  },
+  "proxy": "http://localhost:5000"
 }
