--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.6.4",
     "@twilio/runtime-handler": "^1.0.2",
     "@twilio/video-processors": "^1.0.2",
     "@types/react-router-dom": "^5.3.3",
