--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
     "@twilio/runtime-handler": "^1.0.2",
     "@twilio/video-processors": "^1.0.2",
@@ -25,6 +26,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.3.0",
+    "socket.io": "^4.5.0",
+    "socket.io-client": "^4.5.0",
     "twilio": "3.56",
     "twilio-video": "^2.21.1",
     "zustand": "^4.0.0-rc.1"
