--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "socket.io-client": "^4.5.0",
     "twilio": "3.56",
     "twilio-video": "^2.21.1",
+    "ws": "^8.6.0",
     "zustand": "^4.0.0-rc.1"
   },
   "devDependencies": {
@@ -37,6 +38,7 @@
     "@types/qs": "^6.9.4",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.0",
+    "@types/ws": "^8.5.3",
     "@vitejs/plugin-react": "^1.3.0",
     "dotenv": "^16.0.0",
     "node-env-run": "^4.0.2",
