--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@emotion/styled": "^11.8.1",
     "@mui/icons-material": "^5.6.2",
     "@mui/material": "^5.6.4",
-    "@twilio/runtime-handler": "^1.0.2",
+    "@twilio/runtime-handler": "^1.2.3",
     "@twilio/video-processors": "^1.0.2",
     "@types/react-router-dom": "^5.3.3",
     "body-parser": "^1.19.0",
@@ -23,12 +23,12 @@
     "express": "^4.17.1",
     "express-pino-logger": "^6.0.0",
     "firebase": "^9.6.11",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-router-dom": "^6.3.0",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
-    "twilio": "3.56",
+    "twilio": "^3.77.0",
     "twilio-video": "^2.21.1",
     "ws": "^8.6.0",
     "zustand": "^4.0.0-rc.1"
@@ -36,8 +36,8 @@
   "devDependencies": {
     "@types/express": "^4.17.11",
     "@types/qs": "^6.9.4",
-    "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.0",
+    "@types/react": "17.0.5",
+    "@types/react-dom": "17.0.5",
     "@types/ws": "^8.5.3",
     "@vitejs/plugin-react": "^1.3.0",
     "dotenv": "^16.0.0",
