--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "vite": "vite",
     "dev": "run-p server vite",
     "server": "node-env-run server --exec nodemon | pino-colada",
-    "build": "tsc && vite build",
+    "server-prod": "node ./server/index.js",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
