--- a/.env.production
+++ b/.env.production
@@ -3,6 +3,6 @@ TWILIO_ACCOUNT_SID=AC80be75c110b396c75f31ee8bf4bd9edf
 TWILIO_API_KEY=SK6f9744705e84bdc8a5005b14d1c558f5
 TWILIO_API_SECRET=eH3UUHA5YzI2DncqYG2bDeypCrChlReF
 
-REACT_APP_SOCKET_URL=https://google-meet-clone-production-5c09.up.railway.app/
+REACT_APP_SOCKET_URL=https://google-meet-clone-production-5c09.up.railway.app
 
 PORT=3000
